# AIAdventChallange

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.original.md  README.md
agent-cli/: .coverage  .env.example  pyproject.toml
agent-cli/agent_cli/: __main__.py  config.py  tui.py
agent-cli/agent_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agent-cli/agent_cli/core/: agent.py  memory.py  prompt_builder.py  sessions.py
agent-cli/agent_cli/invariants/: checker.py  store.py
agent-cli/agent_cli/llm/: base.py  dispatch.py  ollama.py  provider.py  proxyapi.py
agent-cli/agent_cli/profile/: extractor.py  profile.py
agent-cli/agent_cli/state/: coordinator.py  machine.py  swarm.py
agent-cli/data/: sessions.db-shm  sessions.db-wal
agent-cli/data/invariants/: default.yaml
agent-cli/data/profiles/: profile_a.md  profile_b.md  vladivlav.md
agent-cli/data/tasks/: 0c444284.json  2e803075.json  3e84f896.json  6c4dc6ec.json  75c1f25f.json  b3554956.json  b7735ef3.json  bb15dec1.json  c0f3613b.json  d5b71cd3.json  d9e72d4a.json  e5d6e0a8.json
agent-cli/tests/: test_coverage.py  test_dispatch.py  test_ollama_smoke.py  test_smoke.py
agent-web/: __main__.py  pyproject.toml
agent-web/agent_web/: app.py  dependencies.py
agent-web/agent_web.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agent-web/agent_web/routers/: agents.py  chat.py  invariants.py  memory.py  metrics.py  models.py  profiles.py  sessions.py  settings.py  tasks.py  tools.py
agent-web/agent_web/schemas/: chat.py  model_info.py  session.py
agent-web/data/: review_metrics.jsonl  settings.json
agent-web/frontend/: .gitignore  package-lock.json  package.json  playwright.config.ts  vite.config.ts
agent-web/rag_eval/: questions.json  results_day22.md  results_day23.md  results_day25.md  results_day28.md  run_eval.py
agent-web/review_eval/: results_day32.md  run_eval.py
agent-web/scripts/: _demo_review_disaster.py  _demo_review_target.py  _smoke_test_arch.py  _smoke_test_bug.py  _smoke_test_clean.py
agent-web/tests/: conftest.py  test_agent_manager.py  test_chat_api.py  test_chat_rag_plus_tools.py  test_comfyui_client.py  test_commands.py  test_commands_ritual.py  test_concurrency.py  test_confirm.py  test_danger.py  test_day_report.py  test_fs_sandbox.py  test_git_tools.py  test_help_command.py  test_mcp_client.py  test_metrics_api.py  test_models_api.py  test_project_server.py  test_rag_corpus.py  test_rag_embedder.py  test_rag_kb.py  test_rag_rewrite.py  test_rate_limit.py  test_review_cli.py  test_review_diff_parser.py  test_review_metrics.py  test_review_prompt_versions.py  test_review_resilience.py  test_sessions_api.py  test_settings_api.py  test_support_command.py  test_tickets.py  test_tools_executor.py  test_tools_router.py
(+405 files in other folders)
