[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
agent-cli = "agent_cli.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
