[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-web"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "mcp[cli]>=1.9",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_web*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
